Update index.html for 2026 event details

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runners 2025</title>
 
-    <link rel="stylesheet" href="./css/style.css?v2">
+    <link rel="stylesheet" href="./css/style.css?v3">
 </head>
 <body>
 
@@ -13,7 +13,11 @@
 
         <img src="./img/logos.png" alt="El Comercio | Eletrolight" width="100%" class="logos">
 
-        <h1 id="main-title">¿POR QUÉ CORRES TÚ?</h1>  
+        <h1 id="main-title">
+            Para el calentamiento
+        </h1>  
+
+        <span style="display: block; margin: 10px auto 20px; text-align: center; font: 1.1rem/1.2 'arial';">Responde esta trivia</span>
 
         <div class="quiz-container" id="quiz-area">
             <div class="card active" id="q1">
@@ -110,7 +114,8 @@
     </div>
 
     <div class="main-bajada">
-        <img src="./img/bajada.webp" alt="" width="100%">
+        <img src="./img/bajada-2.webp" alt="" width="100%" class="bajada-desktop">
+        <img src="./img/bajada-movil.webp?v2" alt="" width="100%" class="bajada-movil">
     </div>
 
     <div class="main-corredores">
@@ -224,7 +229,7 @@
     </div>
 
     <div class="main-anatomia">
-        <img class="titulo-anatomia" src="./img/titulo-anatomia.webp" alt="" width="100%">
+        <img class="titulo-anatomia" src="./img/titulo-anatomia-2.webp" alt="" width="100%">
 
         <h3>
             ¿Qué dice tu cuerpo?
@@ -493,7 +498,7 @@
 
     <div class="main-universo">
         <div class="box-botonera-universo">
-            <img class="bg-universo" src="./img/universo.webp" alt="" width="100%">
+            <img class="bg-universo" src="./img/universo-2.webp" alt="" width="100%">
             <div class="bg-planetas">
                 <button class="universo-btn active" onclick="showCategory('historia', event)">HISTORIA DEL CALZADO</button>
                 <button class="universo-btn" onclick="showCategory('batidos', event)">BATIDOS</button>
@@ -870,10 +875,10 @@
 
     <div class="main-calendario">
         <h3>
-            calendario running
+            calendario running 2026
         </h3>
         <h4>
-            Te presentamos las principales carreras del 2026
+            Aquí las carreras principales.
         </h4>
 
         <div class="calendar-container">
