Update stylesheet version and image sources

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runners 2025</title>
 
-    <link rel="stylesheet" href="./css/style.css?v5">
+    <link rel="stylesheet" href="./css/style.css?v6">
 </head>
 <body>
 
@@ -229,7 +229,7 @@
     </div>
 
     <div class="main-anatomia">
-        <img class="titulo-anatomia" src="./img/titulo-anatomia-2.webp" alt="" width="100%">
+        <img class="titulo-anatomia" src="./img/titulo-anatomia-3.webp" alt="" width="100%">
 
         <h3>
             ¿Qué dice tu cuerpo?
@@ -513,18 +513,15 @@
                 </div>
 
                 <div id="batidos" class="info-box">
-                    <h2>🥤 Energía Líquida</h2>
-                    <p>Recetas de batidos para antes y después de correr...</p>
+                    <img src="./img/timeline-2.webp" alt="Batidos" width="100%">
                 </div>
 
                 <div id="alimentacion" class="info-box">
-                    <h2>🥗 Nutrición Deportiva</h2>
-                    <p>Los mejores alimentos para mejorar tu rendimiento...</p>
+                    <img src="./img/timeline-3.webp" alt="Alimentación" width="100%">
                 </div>
 
                 <div id="gadgets" class="info-box">
-                    <h2>⌚ Tecnología Runner</h2>
-                    <p>Relojes, sensores y apps recomendadas...</p>
+                    <img src="./img/timeline-4.webp" alt="Gadgets" width="100%">
                 </div>
 
             </div>
