--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runners 2025</title>
 
-    <link rel="stylesheet" href="./css/style.css?v7">
+    <link rel="stylesheet" href="./css/style.css?v8">
 </head>
 <body>
 
@@ -521,7 +521,7 @@
                 </div>
 
                 <div id="gadgets" class="info-box">
-                    <img src="./img/timeline-4.webp" alt="Gadgets" width="100%">
+                    <img src="./img/timeline-4-2.webp" alt="Gadgets" width="100%">
                 </div>
 
             </div>
