Update stylesheet version and trivia question text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runners 2025</title>
 
-    <link rel="stylesheet" href="./css/style.css?v9">
+    <link rel="stylesheet" href="./css/style.css?v10">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
             Para el calentamiento
         </h1>  
 
-        <span style="display: block; margin: 10px auto 20px; text-align: center; font: 1.1rem/1.2 'arial';">Responde esta trivia</span>
+        <span style="display: block; margin: 10px auto 20px; text-align: center; font: 1.1rem/1.2 'arial';">Responde la trivia, ¿Por qué corres?</span>
 
         <div class="quiz-container" id="quiz-area">
             <div class="card active" id="q1">
