--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runners 2025</title>
 
-    <link rel="stylesheet" href="./css/style.css?v10">
+    <link rel="stylesheet" href="./css/style.css?v12">
 </head>
 <body>
 
@@ -13,11 +13,12 @@
 
         <img src="./img/logos.png" alt="El Comercio | Eletrolight" width="100%" class="logos">
 
-        <h1 id="main-title">
+        <h1 id="main-title" style="color: transparent; height: 1px;">
             Para el calentamiento
         </h1>  
 
-        <span style="display: block; margin: 10px auto 20px; text-align: center; font: 1.1rem/1.2 'arial';">Responde la trivia, ¿Por qué corres?</span>
+        <span style="display: block; margin: 10px auto 5px; text-align: center; font: 1.3rem/1.2 'arial';">Responde la trivia,</span>
+        <span style="display: block; font: 1.3rem/1.1 'Druk Wide'; text-align: center; margin: 0 auto;">¿Por qué corres?</span>
 
         <div class="quiz-container" id="quiz-area">
             <div class="card active" id="q1">
@@ -36,7 +37,7 @@
                         <span>DESESTRESARME</span>
                     </div>
                 </div>
-                </div>
+            </div>
 
             <div class="card" id="q2">
                 <h2>¿PARA QUÉ CORRES?</h2>
@@ -54,7 +55,7 @@
                         <span>QUIERO SER MEJOR ATLETA</span>
                     </div>
                 </div>
-                </div>
+            </div>
 
             <div class="card" id="q3">
                 <h2>¿ESTÁS DISPUESTO A MEJORAR?</h2>
@@ -72,7 +73,7 @@
                         <span>ME SIENTO COMPROMETIDO</span>
                     </div>
                 </div>
-                </div>
+            </div>
         </div>
 
         <div class="result-card" id="res-salud">
@@ -666,7 +667,7 @@
 
     <div class="main-libros">
         <h3>
-            libros escenciales
+            libros esenciales
         </h3>
 
         <div class="books-container">
