--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runners 2025</title>
 
-    <link rel="stylesheet" href="./css/style.css?v18">
+    <link rel="stylesheet" href="./css/style.css?v20">
 </head>
 <body>
 
@@ -115,8 +115,19 @@
     </div>
 
     <div class="main-bajada">
-        <img src="./img/bajada-2.webp" alt="" width="100%" class="bajada-desktop">
-        <img src="./img/bajada-movil.webp?v2" alt="" width="100%" class="bajada-movil">
+        <div class="box-texto-bajada">
+            <h2>
+                más allá <span>del running</span>
+            </h2>
+            <p>
+                El correr es una experiencia que va más allá del 10k, Media Maratón o Maratón. El running es un desafío interior y transformador que te permite descubrir quién eres y qué obstáculos puedes superar en el camino. Definitivamente, es un enseñanza de vida.
+            </p>
+        </div>
+
+        <img src="./img/logo-auspicio.png" alt="" width="100%" class="logo-auspicio">
+        
+        <img src="./img/bajada-3.webp" alt="" width="100%" class="bajada-desktop">
+        <img src="./img/bajada-movil-2.webp?v2" alt="" width="100%" class="bajada-movil">
     </div>
 
     <div class="main-corredores">
