--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runners 2025</title>
 
-    <link rel="stylesheet" href="./css/style.css?v22">
+    <link rel="stylesheet" href="./css/style.css?v24">
 </head>
 <body>
 
@@ -511,7 +511,12 @@
     <div class="main-universo">
         <div class="box-botonera-universo">
             <img class="bg-universo" src="./img/universo-2.webp" alt="" width="100%">
+            
             <div class="bg-planetas">
+                <div class="box-indicador">
+                    <img src="./img/icon-click.png" alt="" width="100%">
+                    <span>Selecciona los botones para interactuar</span>
+                </div>
                 <button class="universo-btn active" onclick="showCategory('historia', event)">HISTORIA DEL CALZADO</button>
                 <button class="universo-btn" onclick="showCategory('batidos', event)">BATIDOS</button>
                 <button class="universo-btn" onclick="showCategory('alimentacion', event)">ALIMENTACIÓN</button>
@@ -1093,7 +1098,7 @@
                 name: "Christina Ortiz",
                 age: "43 años",
                 videoUrl: "https://cdn.jwplayer.com/players/ySqnF956-sfGpVx0W.html",                 
-                statsImage: "./img/ruta-1.webp" 
+                statsImage: "./img/ruta-1-1.webp" 
             },
             {
                 // Corredor 2
