--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runners 2025</title>
 
-    <link rel="stylesheet" href="./css/style.css?v24">
+    <link rel="stylesheet" href="./css/style.css?v26">
 </head>
 <body>
 
@@ -120,7 +120,11 @@
                 más allá <span>del running</span>
             </h2>
             <p>
-                El correr es una experiencia que va más allá del 10k, Media Maratón o Maratón. El running es un desafío interior y transformador que te permite descubrir quién eres y qué obstáculos puedes superar en el camino. Definitivamente, es un enseñanza de vida.
+                <span><b>El correr es una experiencia que va más allá del 10k,</b></span>
+                <span><b>Media Maratón o Maratón.</b> El running es un desafío</span>
+                <span>interior y transformador que te permite descubrir quién </span>
+                <span>eres y qué obstáculos puedes superar en el camino.</span>
+                <span>Definitivamente, es una enseñanza de vida.</span>
             </p>
         </div>
 
