--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runners 2025</title>
 
-    <link rel="stylesheet" href="./css/style.css?v26">
+    <link rel="stylesheet" href="./css/style.css?v28">
 </head>
 <body>
 
@@ -120,11 +120,11 @@
                 más allá <span>del running</span>
             </h2>
             <p>
-                <span><b>El correr es una experiencia que va más allá del 10k,</b></span>
-                <span><b>Media Maratón o Maratón.</b> El running es un desafío</span>
-                <span>interior y transformador que te permite descubrir quién </span>
-                <span>eres y qué obstáculos puedes superar en el camino.</span>
-                <span>Definitivamente, es una enseñanza de vida.</span>
+                <b>El correr es una experiencia que va más allá del 10k,
+                Media Maratón o Maratón.</b> El running es un desafío
+                interior y transformador que te permite descubrir quién 
+                eres y qué obstáculos puedes superar en el camino.
+                Definitivamente, es una enseñanza de vida.
             </p>
         </div>
 
@@ -138,6 +138,11 @@
         <h3>
             5 peruanos que la rompen en las pistas
         </h3>
+
+        <div class="indicacion-corredores">
+            <img src="./img/icon-click.png" alt="" width="100%">
+            <span>Presiona la foto de un corredor</span>
+        </div>
 
         <div class="profiles-nav">
             <div class="profile-thumb active" data-index="0" onclick="loadRunner(0)">
@@ -183,6 +188,11 @@
         <p>
             Repasa cuatro de las rutas más emblemáticas del running nacional en los últimos años.
         </p>
+
+        <div class="indicacion-corredores indicacion-rutas">
+            <img src="./img/icon-click-2.png" alt="" width="100%">
+            <span>Presiona un botón para ver las rutas</span>
+        </div>
 
         <div class="nav-buttons">
             <button class="nav-btn active" onclick="loadRoute(0)">NEW BALANCE</button>
