--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runners 2025</title>
 
-    <link rel="stylesheet" href="./css/style.css?v30">
+    <link rel="stylesheet" href="./css/style.css?v32">
 </head>
 <body>
 
@@ -261,8 +261,19 @@
             ¿Qué dice tu cuerpo?
         </h3>
         <h4>
-            Hablan los especialistas
+            Habla el especialista
         </h4>
+        <div class="expert-card">
+            <div class="img-circle">
+                <img src="./img/experto-1.png" alt="Giancarlo Becerra" class="expert-photo" width="100%">
+            </div>
+            <div class="expert-info">
+                <div class="expert-name">GIANCARLO<br>BECERRA</div>
+                <div class="expert-role">
+                    DIRECTOR DE LA CARRERA DE TERAPIA FÍSICA Y CIENCIA DE LA ACTIVIDAD DEL DEPORTE EN LA UPC.
+                </div>
+            </div>
+        </div>
 
         <div class="box-video-especialista">
             <p>
@@ -393,6 +404,21 @@
         <h3>
             ¿Y sobre la nutrición?
         </h3>
+        <h4>
+            Habla la especialista
+        </h4>
+
+        <div class="expert-card">
+            <div class="img-circle">
+                <img src="./img/experto-2.png" alt="Giancarlo Becerra" class="expert-photo" width="100%">
+            </div>
+            <div class="expert-info">
+                <div class="expert-name">CLAUDIA<br>ONTANEDA</div>
+                <div class="expert-role">
+                    DIRECTORA DEL PROGRAMA DE NUTRICIÓN Y DIETÉTICA DE LA UPC
+                </div>
+            </div>
+        </div>
 
         <div class="box-video-especialista">
             <p>
@@ -1036,6 +1062,15 @@
                 <p>
                     <span>Investigación y desarrollo:</span> 
                     Christian Marlow
+                </p>
+            </li>
+            <li>
+                <p>
+                    <span>Videos:</span>
+                    Entrevistas: Gianina González 
+                    <br>                                     
+                    Realización y Edición:                    
+                    Ximena Castro
                 </p>
             </li>
             <!--<li>
