--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runners 2025</title>
 
-    <link rel="stylesheet" href="./css/style.css?v40">
+    <link rel="stylesheet" href="https://nuevasnarrativasec.github.io/runners-2025/css/style.css?v45">
 
     <style>
         /* Ocultar anuncios y elementos no deseados */       
